INSTALL(FILES
  "pinocchio/models/simple_humanoid.urdf"
  "pinocchio/models/romeo/romeo_description/urdf/romeo_small.urdf"
  "nao_description/urdf/nao_robot_v4.urdf"
  "poppy-humanoid/hardware/URDF/robots/Poppy_Humanoid.URDF"
  "lwr-robot-description/lwr-robot2.urdf"
  "ihmc_atlas_ros/urdf/atlas_unplugged_v5_no_hands.urdf"
  "hyq.urdf"
  DESTINATION "share/pinocchio-benchmarks/models"
  )
